[package]
name = "RCLI"
version = "0.1.0"

edition = "2024"


[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
fs = "0.0.5"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
structopt = "0.3.26"
toml = "0.8.12"
zxcvbn = "3.1.0"
